<resources>
    <string name="app_name">灵魂决斗</string>
    <string name="startGame">开始游戏</string>
    <string name="infoGame">游戏说明</string>
    <string name="textGame">和我一起走迷宫</string>
    <string name="up">up ↑</string>
    <string name="down">down ↓</string>
    <string name="left">left ←</string>
    <string name="right">right →</string>
    <string name="jianjie">游戏简介：走迷宫是一款益智类经典小游戏</string>
    <string name="opration">操作说明：通过屏幕下方4个方向键控制行走路线，只要将小红点从左上角移动到右下角就视为成功闯关。同时还提供了循环播放背景音乐，左下角的按键可以播放背景音乐，右下角的按键可以暂停背景音乐的播放。</string>
    <string name="go">start the game</string>
    <string name="todo">little_goast</string>
    <string name="soul">little_soul</string>
    <string name="migong">TODO</string>
    <string name="fight">匹配</string>
    <string name="story">剧情</string>
    <string name="options_button">用户设置</string>
    <string name="helpp">帮助</string>
    <string name="head">head</string>
    <string name="loginb">登录</string>
    <string name="reigistb">注册</string>
    <string name="reigist_code">手机验证码注册</string>
    <string name="confirm">确认</string>
    <string name="user_id">请输入游戏账号</string>
    <string name="password">请输入密码</string>
    <string name="password_again">请再次输入密码</string>
    <string name="code">请输入验证码</string>
    <string name="send">发送验证码</string>
    <string name="return_regist">返回普通注册</string>
    <string name="return_login">返回普通登录</string>
    <string name="code_login">验证码登录</string>
    <string name="k1">Accumlate</string>
    <string name="k3">WhirlWind</string>
    <string name="k2">Cleaving</string>
    <string name="k4">SwiftEdge</string>
    <string name="k5">Demolition\nImpact</string>
    <string name="k6">Strength</string>
    <string name="k7">Divine\Inspirate</string>
    <string name="k8">CrippingEdge</string>
    <string name="kk">Brave!\nHeart!</string>>

</resources>
