<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/title"
    android:scaleType = "center"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/userid"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:enabled="true"
        android:gravity="center"
        android:hint="@string/user_id"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="UserId" />

    <EditText
        android:id="@+id/userpwd1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/userpwd2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/regist_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FF0000"
            android:text="@string/reigistb"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/regist_button_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FF0000"
            android:text="@string/reigist_code"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>

